--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<h1>NGX JOYSTICK</h1>
+<p>An Angular joystick component wrapper for the nipplejs library. Github repo is here
+    <a href="https://github.com/wweitzel/ngx-joystick">ngx-joystick</a>.</p>
+
 <div>Static Joystick</div>
 <div class="container noselect">
     <div class="zone">
@@ -30,7 +34,7 @@
 
 <br>
 
-<div>Semi Joystick</div>
+<div>Semi Joystick (click in box to show)</div>
 <div class="container noselect">
     <div class="zone">
         <ngx-joystick #semiJoystick [options]="semiOptions" (move)="onMoveSemi($event)"></ngx-joystick>
@@ -52,7 +56,7 @@
 
 <br>
 
-<div>Dynamic Joystick</div>
+<div>Dynamic Joystick (click in box to show)</div>
 <div class="container noselect">
     <div class="zone">
         <ngx-joystick #dynamicJoystick [options]="dynamicOptions" (move)="onMoveDynamic($event)"></ngx-joystick>
